init flyway & metadata DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/RWorkspace
+spring.datasource.username=root
+spring.datasource.password=password
 
+#??? warning ??
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.flyway.enabled=true
+spring.jpa.generate-ddl=false
+
+#docker ? ?? ??? ? flyway_schema_history table ? ????
+spring.flyway.baselineOnMigrate = true
