--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.7.5'
+    implementation 'org.flywaydb:flyway-core:9.6.0'
+    implementation "org.flywaydb:flyway-mysql"
+    implementation 'com.mysql:mysql-connector-j:8.0.31'
+    implementation 'org.projectlombok:lombok:1.18.20'
     compileOnly 'org.projectlombok:lombok'
+
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
