--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,13 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.7.5'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.flywaydb:flyway-core:9.6.0'
     implementation "org.flywaydb:flyway-mysql"
     implementation 'com.mysql:mysql-connector-j:8.0.31'
     implementation 'org.projectlombok:lombok:1.18.20'
     implementation 'javax.persistence:javax.persistence-api:2.2'
-    implementation 'org.springframework.data:spring-data-jpa:2.7.5'
 
 
     annotationProcessor 'org.projectlombok:lombok'
