--- a/build.gradle
+++ b/build.gradle
@@ -19,18 +19,27 @@ repositories {
 }
 
 dependencies {
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-tomcat:2.7.5'
+
+    implementation 'org.springframework.security:spring-security-core:5.7.4'
+    implementation 'org.springframework.security:spring-security-web:5.7.4'
+    implementation 'org.springframework.security:spring-security-config:5.7.4'
+    implementation 'org.springframework:spring-webmvc:5.3.23'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
     implementation 'org.flywaydb:flyway-core:9.6.0'
     implementation "org.flywaydb:flyway-mysql"
+
     implementation 'com.mysql:mysql-connector-j:8.0.31'
-    implementation 'org.projectlombok:lombok:1.18.20'
-    implementation 'javax.persistence:javax.persistence-api:2.2'
 
-
+    implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 task testDbUp(type: Exec) {
