error handling & notnull

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:13306/RWorkflow
+#spring.datasource.url=jdbc:mysql://localhost:13307/RWorkflow_test
 spring.datasource.username=root
 spring.datasource.password=password
 
 #??? warning ??
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.flyway.enabled=true
 spring.jpa.generate-ddl=false
+
+spring.flyway.enabled=false
+#spring.flyway.enabled=true
 
 #docker ? ?? ??? ? flyway_schema_history table ? ????
 spring.flyway.baselineOnMigrate = true
+
+server.error.include-exception=true
+server.error.include-message=always
