--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,17 @@ spring.datasource.url=jdbc:mysql://localhost:13306/RWorkflow
 #spring.datasource.url=jdbc:mysql://localhost:13307/RWorkflow_test
 spring.datasource.username=root
 spring.datasource.password=password
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #??? warning ??
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.generate-ddl=false
 
-spring.flyway.enabled=false
-#spring.flyway.enabled=true
+spring.flyway.enabled=true
+#spring.flyway.enabled=false
 
 #docker ? ?? ??? ? flyway_schema_history table ? ????
 spring.flyway.baselineOnMigrate = true
