--- a/docker/docker-compose-test-db.yml
+++ b/docker/docker-compose-test-db.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - MYSQL_DATABASE=RWorkflow_test
       - MYSQL_ROOT_PASSWORD=password
-      - TZ=UTC
+      - TZ=Asia/Seoul
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
