--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'
+
 
     implementation 'org.springframework:spring-webmvc:5.3.23'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
@@ -39,6 +41,10 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
 
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 task testDbUp(type: Exec) {
